syntax = "proto3";

package bazil.db;

option go_package = "wire";

message VolumeStorage {
  string backend = 1;
  string sharingKeyName = 2;
}
