syntax = "proto3";

package bazil.control;

option go_package = "wire";

message VolumeMountRequest {
  string volumeName = 1;
  string mountpoint = 2;
}

message VolumeMountResponse {
}

message VolumeCreateRequest {
  string volumeName = 1;
  string backend = 2;
  string sharingKeyName = 3;
}

message VolumeCreateResponse {
}

message VolumeConnectRequest {
  // Must be exactly 32 bytes long.
  bytes pub = 1;
  string volumeName = 2;
  string localVolumeName = 3;
  string backend = 4;
  string sharingKeyName = 5;
}

message VolumeConnectResponse {
}

message VolumeStorageAddRequest {
  string volumeName = 1;
  string name = 2;
  string backend = 3;
  string sharingKeyName = 4;
}

message VolumeStorageAddResponse {
}
